# annota

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ui/: TransparentCanvas.cpp  TransparentCanvas.h
